--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 				
 				<figure class="left">
 					<picture>
-						<source media="(min-width: 30rem)" scrset="assets/pumpkins_wide.jpg">
-						<img scr="assets/pumpkins_sq.jpg">
+						<source media="(min-width: 30rem)" scrset="pumpkins_wide.jpg">
+						<img src="pumpkins_sq.jpg">
 					</picture>
 					<figcaption>
 						<p>Photo by <a href="https://unsplash.com/@hudsoncrafted?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Debby Hudson</a> on <a href="https://unsplash.com/s/photos/pumpkins?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>.</p>
